--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -21,6 +21,12 @@
     --foreground: #ededed;
   }
 }
+@font-face {
+  font-family: "MyFont";
+  src: url("/fonts/Romelio.otf") format("opentype");
+  font-weight: normal;
+  font-style: normal;
+}
 
 body {
   background: var(--background);
@@ -28,8 +34,8 @@ body {
   font-family: var(--font-sans), Arial, Helvetica, sans-serif;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  font-family: var(--font-display), serif;
+h1, h2, h3, h4, h5, h6 , p {
+  font-family: "Romelio", serif;
 }
 
 .accent-text {
